--- a/PayMe/PayMe/Web.config
+++ b/PayMe/PayMe/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PayMe-20181123091326.mdf;Initial Catalog=aspnet-PayMe-20181123091326;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!-- TODO: Replace the ****'s with the correct entries -->
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebTimeSheetManagement-20170822111306.mdf;Initial Catalog=aspnet-WebTimeSheetManagement-20170822111306;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="TimesheetDBEntities" connectionString="Data Source=INLTP-DKALYANA\SQLEXPRESS; initial catalog=TimesheetDB; Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -78,7 +80,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" >
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
