--- a/PayMe/DAL/DAL.csproj
+++ b/PayMe/DAL/DAL.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="ClientManager.cs" />
     <Compile Include="DatabaseContext.cs" />
     <Compile Include="UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
