Project page and Design changes added

--- a/PayMe/DAL/DAL.csproj
+++ b/PayMe/DAL/DAL.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="ClientManager.cs" />
     <Compile Include="DatabaseContext.cs" />
+    <Compile Include="ProjectManager.cs" />
     <Compile Include="UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
