--- a/PayMe/Business/Business.csproj
+++ b/PayMe/Business/Business.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Client.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="LoginViewModel.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration.cs" />
   </ItemGroup>
