--- a/PayMe/PayMe/Web.config
+++ b/PayMe/PayMe/Web.config
@@ -11,10 +11,10 @@
   <connectionStrings>
     <!-- TODO: Replace the ****'s with the correct entries -->
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebTimeSheetManagement-20170822111306.mdf;Initial Catalog=aspnet-WebTimeSheetManagement-20170822111306;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="PayMe-Connectionstring" connectionString="Data Source=INLTP-DKALYANA\SQLEXPRESS; initial catalog=PayMe; Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="PayMe-Connectionstring" connectionString="Data Source=INLTP-KRISHNAV\SQLEXPRESS; initial catalog=PayMe; Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="PayMe-Connectionstring" value="Data Source=INLTP-DKALYANA\SQLEXPRESS;Initial Catalog=PayMe;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True" />
+    <add key="PayMe-Connectionstring" value="Data Source=INLTP-KRISHNAV\SQLEXPRESS;Initial Catalog=PayMe;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
