--- a/PayMe/DAL/DAL.csproj
+++ b/PayMe/DAL/DAL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ExpenseManager.cs" />
     <Compile Include="ProjectManager.cs" />
     <Compile Include="TaskManager.cs" />
+    <Compile Include="TimesheetManager.cs" />
     <Compile Include="UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
