--- a/PayMe/Business/Business.csproj
+++ b/PayMe/Business/Business.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration.cs" />
+    <Compile Include="Report.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="Timesheet.cs" />
   </ItemGroup>
