--- a/PayMe/DAL/DAL.csproj
+++ b/PayMe/DAL/DAL.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ProjectManager.cs" />
     <Compile Include="TaskManager.cs" />
     <Compile Include="TimesheetManager.cs" />
+    <Compile Include="TimeTrackerManager.cs" />
     <Compile Include="UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
