Timesheet Report development

--- a/PayMe/PayMe/PayMe.csproj
+++ b/PayMe/PayMe/PayMe.csproj
@@ -833,6 +833,7 @@
     <Content Include="Views\Timesheet\View.cshtml" />
     <Content Include="Views\Timesheet\Index.cshtml" />
     <Content Include="Views\Timesheet\Test.cshtml" />
+    <Content Include="Views\Report\TimesheetDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
