--- a/PayMe/DAL/DAL.csproj
+++ b/PayMe/DAL/DAL.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="ClientManager.cs" />
     <Compile Include="DatabaseContext.cs" />
+    <Compile Include="EmployeeProjectManager.cs" />
     <Compile Include="ExpenseManager.cs" />
     <Compile Include="ProjectManager.cs" />
     <Compile Include="TaskManager.cs" />
