--- a/PayMe/Business/Business.csproj
+++ b/PayMe/Business/Business.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Employee.cs" />
@@ -80,6 +81,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration.cs" />
     <Compile Include="Report.cs" />
+    <Compile Include="Session.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="Timesheet.cs" />
     <Compile Include="TimeTracker.cs" />
