--- a/PayMe/PayMe/Web.config
+++ b/PayMe/PayMe/Web.config
@@ -34,11 +34,11 @@
     <add name="Excel07ConString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0};Extended Properties='Excel 8.0;HDR=YES'" />
     <!-- TODO: Replace the ****'s with the correct entries -->
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebTimeSheetManagement-20170822111306.mdf;Initial Catalog=aspnet-WebTimeSheetManagement-20170822111306;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="PayMe-Connectionstring" connectionString="Server=paymetest.veemaksolutions.com\MSSQLSERVER2012;Database=paymeacj_payme0430;User Id=paymeacj_Paymeacc;Password=Payme@123;" providerName="System.Data.SqlClient" />
+    <add name="PayMe-Connectionstring" connectionString="Server=.\MSSQLSERVER2012;Database=paymeacj_payme0430;User Id=paymeacj_Paymeacc;Password=Payme@123;" providerName="System.Data.SqlClient" />
     
   </connectionStrings>
   <appSettings>
-    <add key="PayMe-Connectionstring" value="Server=paymetest.veemaksolutions.com\MSSQLSERVER2012;Database=paymeacj_payme0430;User Id=paymeacj_Paymeacc;Password=Payme@123;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True" />
+    <add key="PayMe-Connectionstring" value="Server=.\MSSQLSERVER2012;Database=paymeacj_payme0430;User Id=paymeacj_Paymeacc;Password=Payme@123;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
