--- a/PayMe/Business/Business.csproj
+++ b/PayMe/Business/Business.csproj
@@ -85,6 +85,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration.cs" />
     <Compile Include="Report.cs" />
+    <Compile Include="Report\AccountExpenseSummary.cs" />
+    <Compile Include="Report\TimeSheetSummary.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="Timesheet.cs" />
