--- a/PayMe/PayMe/PayMe.csproj
+++ b/PayMe/PayMe/PayMe.csproj
@@ -320,6 +320,7 @@
     <Content Include="js\jquery-3.3.1.min.js" />
     <Content Include="js\lumino.glyphs.js" />
     <Content Include="js\npm.js" />
+    <Content Include="js\PaymeUtil.js" />
     <Content Include="js\respond.min.js" />
     <Content Include="js\tableExport.js" />
     <Content Include="login.html" />
